frontend/test/should_pass/retype_005.grg
using attrib_model_001;

rule r {
	a:NINT;
	b:NINT;
	a -e:Edge-> b;
	a -f:Edge-> b;

	replace {
		c: typeof(a)<b>;
		a -e-> c;
		c <-f- a;
	}
}

