frontend/test/should_fail/retype_002.grg
using attrib_model_001;

rule r {
	a:NINT;
	b:NINT;
	a -e:Edge-> b;

	replace {
		c: typeof(a)<a>;
		a -e-> c;

	}
}

